--- a/WK02.ipynb
+++ b/WK02.ipynb
@@ -1210,11 +1210,56 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'zip': [11204, 11249, 11256, 11245, 11231],\n",
+              "  'id': 'efd0191',\n",
+              "  'grades': [66, 52, 62, 62, 91]},\n",
+              " {'zip': [11225, 11238, 11238, 11242, 11239],\n",
+              "  'id': 'xvy2764',\n",
+              "  'grades': [74, 59, 78, 97, 61]},\n",
+              " {'zip': [11255, 11231, 11201, 11245, 11242],\n",
+              "  'id': 'zrx6328',\n",
+              "  'grades': [65, 56, 62, 87, 98]},\n",
+              " {'zip': [11256, 11222, 11225, 11231, 11242],\n",
+              "  'id': 'tji0566',\n",
+              "  'grades': [92, 67, 53, 92, 66]},\n",
+              " {'zip': [11223, 11238, 11243, 11238, 11238],\n",
+              "  'id': 'cxx9116',\n",
+              "  'grades': [87, 82, 89, 57, 57]},\n",
+              " {'zip': [11215, 11215, 11216, 11210, 11228],\n",
+              "  'id': 'ysm3110',\n",
+              "  'grades': [77, 98, 58, 61, 66]},\n",
+              " {'zip': [11226, 11232, 11235, 11252, 11237],\n",
+              "  'id': 'pzd9147',\n",
+              "  'grades': [90, 82, 95, 67, 77]},\n",
+              " {'zip': [11201, 11221, 11206, 11245, 11222],\n",
+              "  'id': 'tno7083',\n",
+              "  'grades': [95, 57, 81, 62, 78]},\n",
+              " {'zip': [11224, 11249, 11204, 11246, 11250],\n",
+              "  'id': 'mco2071',\n",
+              "  'grades': [51, 56, 66, 84, 56]},\n",
+              " {'zip': [11235, 11224, 11208, 11246, 11210],\n",
+              "  'id': 'bsj4109',\n",
+              "  'grades': [69, 67, 67, 84, 85]}]"
+            ]
+          },
+          "execution_count": 41,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# TODO: first, append grade list to objects"
+        "# TODO: first, append grade list to objects\n",
+        "\n",
+        "for obj in my_data:\n",
+        "    obj[\"grades\"] = [random.randint(50, 100) for _ in range(5)]\n",
+        "\n",
+        "my_data"
       ]
     },
     {
